--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,9 @@
     <meta name="description" content="数学をもっと楽しく。教育アプリ開発者 Jun Yamashita のポートフォリオサイト。">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+JP:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+JP:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
     <style>
         :root {
             --primary: #6366f1;
@@ -59,7 +62,7 @@
             right: 0;
             bottom: 0;
             background: radial-gradient(circle at 30% 20%, rgba(99, 102, 241, 0.15) 0%, transparent 50%),
-                        radial-gradient(circle at 70% 80%, rgba(236, 72, 153, 0.1) 0%, transparent 50%);
+                radial-gradient(circle at 70% 80%, rgba(236, 72, 153, 0.1) 0%, transparent 50%);
             pointer-events: none;
         }
 
@@ -232,18 +235,22 @@
             .logo {
                 font-size: 2rem;
             }
+
             .developer-name {
                 font-size: 1.25rem;
             }
+
             .tagline {
                 font-size: 1rem;
             }
+
             .apps-grid {
                 grid-template-columns: 1fr;
             }
         }
     </style>
 </head>
+
 <body>
     <section class="hero">
         <div class="hero-content">
@@ -257,9 +264,11 @@
         <h2 class="section-title">📱 Apps</h2>
         <div class="apps-grid">
             <!-- 三角比ますたー -->
-            <a href="https://apps.apple.com/jp/app/%E4%B8%89%E8%A7%92%E6%AF%94%E3%81%BE%E3%81%99%E3%81%9F%E3%83%BC/id1640664452" class="app-card" target="_blank" rel="noopener">
+            <a href="https://apps.apple.com/jp/app/%E4%B8%89%E8%A7%92%E6%AF%94%E3%81%BE%E3%81%99%E3%81%9F%E3%83%BC/id1640664452"
+                class="app-card" target="_blank" rel="noopener">
                 <div class="app-header">
-                    <div class="app-icon-placeholder" style="background: linear-gradient(135deg, #f59e0b, #ea580c);">📐</div>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/78/91/b7/7891b75d-be9f-26c4-88fb-d6f6636c379f/AppIcon-0-0-1x_U007epad-0-1-sRGB-85-220.png/100x100bb.jpg"
+                        alt="三角比ますたー" class="app-icon">
                     <h3 class="app-name">三角比ますたー</h3>
                 </div>
                 <p class="app-description">三角比学習アプリの決定版！単位円とクイズ感覚で楽しく学ぼう。Game Center対応でタイムアタックのランキングを競え！</p>
@@ -267,9 +276,11 @@
             </a>
 
             <!-- 積分ますたー -->
-            <a href="https://apps.apple.com/jp/app/%E7%A9%8D%E5%88%86%E3%81%BE%E3%81%99%E3%81%9F%E3%83%BC/id6736927178" class="app-card" target="_blank" rel="noopener">
+            <a href="https://apps.apple.com/jp/app/%E7%A9%8D%E5%88%86%E3%81%BE%E3%81%99%E3%81%9F%E3%83%BC/id6736927178"
+                class="app-card" target="_blank" rel="noopener">
                 <div class="app-header">
-                    <div class="app-icon-placeholder" style="background: linear-gradient(135deg, #6366f1, #8b5cf6);">∫</div>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/ac/00/79/ac0079a3-ae10-ef26-43e5-ce3f82e1f1c1/AppIcon-0-0-1x_U007epad-0-1-85-220.png/100x100bb.jpg"
+                        alt="積分ますたー" class="app-icon">
                     <h3 class="app-name">積分ますたー</h3>
                 </div>
                 <p class="app-description">積分計算をマスターしよう！クイズ形式で楽しく積分の練習ができる学習アプリ。</p>
@@ -277,9 +288,11 @@
             </a>
 
             <!-- 合同式ますたー -->
-            <a href="https://apps.apple.com/jp/app/%E5%90%88%E5%90%8C%E5%BC%8F%E3%81%BE%E3%81%99%E3%81%9F%E3%83%BC/id6474422643" class="app-card" target="_blank" rel="noopener">
+            <a href="https://apps.apple.com/jp/app/%E5%90%88%E5%90%8C%E5%BC%8F%E3%81%BE%E3%81%99%E3%81%9F%E3%83%BC/id6474422643"
+                class="app-card" target="_blank" rel="noopener">
                 <div class="app-header">
-                    <div class="app-icon-placeholder" style="background: linear-gradient(135deg, #3b82f6, #06b6d4);">≡</div>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/c9/f4/d2/c9f4d2e0-16e8-6947-a171-e0ce2fa69780/AppIcon-0-0-1x_U007epad-0-85-220.png/100x100bb.jpg"
+                        alt="合同式ますたー" class="app-icon">
                     <h3 class="app-name">合同式ますたー</h3>
                 </div>
                 <p class="app-description">楽しいクイズ形式で１次合同方程式を習熟しよう！数学オリンピックや情報科学の基礎にも。</p>
@@ -287,9 +300,11 @@
             </a>
 
             <!-- カンタン席替え -->
-            <a href="https://apps.apple.com/jp/app/%E3%82%AB%E3%83%B3%E3%82%BF%E3%83%B3%E5%B8%AD%E6%9B%BF%E3%81%88/id1640634924" class="app-card" target="_blank" rel="noopener">
+            <a href="https://apps.apple.com/jp/app/%E3%82%AB%E3%83%B3%E3%82%BF%E3%83%B3%E5%B8%AD%E6%9B%BF%E3%81%88/id1640634924"
+                class="app-card" target="_blank" rel="noopener">
                 <div class="app-header">
-                    <div class="app-icon-placeholder" style="background: linear-gradient(135deg, #10b981, #14b8a6);">🪑</div>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple122/v4/a2/86/03/a286031d-0b15-2209-62a7-d19f04fb4763/AppIcon-1x_U007emarketing-0-4-sRGB-85-220.png/100x100bb.jpg"
+                        alt="カンタン席替え" class="app-icon">
                     <h3 class="app-name">カンタン席替え</h3>
                 </div>
                 <p class="app-description">授業の毎時間でも気軽に使える席替えアプリ。iPhone、iPad、Mac、Apple TVに対応！</p>
@@ -297,9 +312,11 @@
             </a>
 
             <!-- 数字を順番に押す -->
-            <a href="https://apps.apple.com/jp/app/%E6%95%B0%E5%AD%97%E3%82%92%E9%A0%86%E7%95%AA%E3%81%AB%E6%8A%BC%E3%81%99/id6443621796" class="app-card" target="_blank" rel="noopener">
+            <a href="https://apps.apple.com/jp/app/%E6%95%B0%E5%AD%97%E3%82%92%E9%A0%86%E7%95%AA%E3%81%AB%E6%8A%BC%E3%81%99/id6443621796"
+                class="app-card" target="_blank" rel="noopener">
                 <div class="app-header">
-                    <div class="app-icon-placeholder" style="background: linear-gradient(135deg, #ec4899, #f43f5e);">🔢</div>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple112/v4/22/36/17/223617d7-287a-da1c-65eb-3b5ceba19a18/AppIcon-1x_U007emarketing-0-7-0-85-220.png/100x100bb.jpg"
+                        alt="数字を順番に押す" class="app-icon">
                     <h3 class="app-name">数字を順番に押す</h3>
                 </div>
                 <p class="app-description">暇つぶし、脳トレ、目の体操、速読トレーニングにどうぞ！シンプルだけどハマる！</p>
@@ -317,4 +334,5 @@
         <p>© 2025 Jun Yamashita / MathRunner Lab. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
