--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathRunner Lab | Jun Yamashita</title>
-    <meta name="description" content="数学をもっと楽しく。教育アプリ開発者 Jun Yamashita のポートフォリオサイト。">
+    <title>MathRunner Lab | 学びをもっと楽しく</title>
+    <meta name="description" content="数学をもっと楽しく。教育アプリ開発者のポートフォリオサイト。">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -13,17 +13,16 @@
         rel="stylesheet">
     <style>
         :root {
-            --primary: #6366f1;
-            --primary-dark: #4f46e5;
-            --background: #0f0f1a;
-            --surface: #1a1a2e;
-            --surface-light: #252542;
-            --text: #f8fafc;
-            --text-muted: #94a3b8;
-            --accent-green: #10b981;
-            --accent-orange: #f59e0b;
-            --accent-pink: #ec4899;
-            --accent-blue: #3b82f6;
+            --gold: #d4af37;
+            --gold-light: #f5e6a3;
+            --cream: #fef9e7;
+            --warm-white: #fdfcfa;
+            --text-dark: #2d2a26;
+            --text-muted: #6b6560;
+            --accent-warm: #e8985e;
+            --accent-coral: #e57373;
+            --shadow-soft: 0 4px 20px rgba(0, 0, 0, 0.06);
+            --shadow-hover: 0 12px 40px rgba(0, 0, 0, 0.12);
         }
 
         * {
@@ -34,22 +33,22 @@
 
         body {
             font-family: 'Inter', 'Noto Sans JP', sans-serif;
-            background: var(--background);
-            color: var(--text);
-            line-height: 1.6;
+            background: linear-gradient(180deg, var(--cream) 0%, var(--warm-white) 100%);
+            color: var(--text-dark);
+            line-height: 1.7;
             min-height: 100vh;
         }
 
         /* Hero Section */
         .hero {
-            min-height: 60vh;
+            min-height: 50vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
-            padding: 4rem 2rem;
-            background: linear-gradient(135deg, var(--background) 0%, #1e1e3f 50%, var(--background) 100%);
+            padding: 5rem 2rem;
+            background: linear-gradient(135deg, #fff9e6 0%, #fff5f5 50%, #f5f0ff 100%);
             position: relative;
             overflow: hidden;
         }
@@ -57,13 +56,25 @@
         .hero::before {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: radial-gradient(circle at 30% 20%, rgba(99, 102, 241, 0.15) 0%, transparent 50%),
-                radial-gradient(circle at 70% 80%, rgba(236, 72, 153, 0.1) 0%, transparent 50%);
-            pointer-events: none;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle at 30% 30%, rgba(212, 175, 55, 0.08) 0%, transparent 40%),
+                radial-gradient(circle at 70% 70%, rgba(229, 152, 94, 0.06) 0%, transparent 40%);
+            animation: float 20s ease-in-out infinite;
+        }
+
+        @keyframes float {
+
+            0%,
+            100% {
+                transform: translate(0, 0) rotate(0deg);
+            }
+
+            50% {
+                transform: translate(-2%, -2%) rotate(3deg);
+            }
         }
 
         .hero-content {
@@ -72,64 +83,126 @@
         }
 
         .logo {
-            font-size: 3rem;
+            font-size: 3.5rem;
             font-weight: 700;
-            background: linear-gradient(135deg, var(--primary) 0%, var(--accent-pink) 100%);
+            background: linear-gradient(135deg, var(--gold) 0%, var(--accent-warm) 50%, var(--gold) 100%);
+            background-size: 200% auto;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            margin-bottom: 0.5rem;
+            margin-bottom: 1rem;
+            animation: shine 3s ease-in-out infinite;
+            letter-spacing: -0.02em;
         }
 
-        .developer-name {
-            font-size: 1.5rem;
-            color: var(--text);
-            margin-bottom: 1rem;
-            font-weight: 500;
+        @keyframes shine {
+
+            0%,
+            100% {
+                background-position: 0% center;
+            }
+
+            50% {
+                background-position: 100% center;
+            }
         }
 
         .tagline {
-            font-size: 1.25rem;
+            font-size: 1.2rem;
             color: var(--text-muted);
+            font-weight: 400;
+            margin-bottom: 0.5rem;
+        }
+
+        .tagline-sub {
+            font-size: 1rem;
+            color: var(--text-muted);
+            opacity: 0.8;
             font-style: italic;
-            margin-bottom: 2rem;
+        }
+
+        .hero-emoji {
+            font-size: 2.5rem;
+            margin-bottom: 1.5rem;
+            animation: bounce 2s ease-in-out infinite;
+        }
+
+        @keyframes bounce {
+
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(-10px);
+            }
         }
 
         /* Apps Section */
         .apps-section {
-            padding: 4rem 2rem;
-            max-width: 1200px;
+            padding: 5rem 2rem;
+            max-width: 1100px;
             margin: 0 auto;
         }
 
-        .section-title {
-            font-size: 2rem;
-            font-weight: 700;
+        .section-header {
             text-align: center;
             margin-bottom: 3rem;
-            color: var(--text);
+        }
+
+        .section-title {
+            font-size: 1.8rem;
+            font-weight: 600;
+            color: var(--text-dark);
+            margin-bottom: 0.5rem;
+        }
+
+        .section-subtitle {
+            color: var(--text-muted);
+            font-size: 1rem;
         }
 
         .apps-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 1.5rem;
         }
 
         .app-card {
-            background: var(--surface);
-            border-radius: 20px;
-            padding: 2rem;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            border: 1px solid rgba(255, 255, 255, 0.05);
+            background: white;
+            border-radius: 24px;
+            padding: 1.75rem;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            border: 1px solid rgba(212, 175, 55, 0.15);
             text-decoration: none;
             color: inherit;
             display: block;
+            box-shadow: var(--shadow-soft);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .app-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 3px;
+            background: linear-gradient(90deg, var(--gold), var(--accent-warm));
+            opacity: 0;
+            transition: opacity 0.3s ease;
         }
 
         .app-card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+            transform: translateY(-6px);
+            box-shadow: var(--shadow-hover);
+            border-color: rgba(212, 175, 55, 0.3);
+        }
+
+        .app-card:hover::before {
+            opacity: 1;
         }
 
         .app-header {
@@ -140,81 +213,73 @@
         }
 
         .app-icon {
-            width: 64px;
-            height: 64px;
+            width: 60px;
+            height: 60px;
             border-radius: 14px;
             object-fit: cover;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-        }
-
-        .app-icon-placeholder {
-            width: 64px;
-            height: 64px;
-            border-radius: 14px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 2rem;
-            color: white;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
 
         .app-name {
-            font-size: 1.25rem;
+            font-size: 1.15rem;
             font-weight: 600;
-            color: var(--text);
+            color: var(--text-dark);
         }
 
         .app-description {
             color: var(--text-muted);
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             line-height: 1.7;
             margin-bottom: 1rem;
         }
 
         .app-badge {
             display: inline-block;
-            padding: 0.25rem 0.75rem;
+            padding: 0.3rem 0.9rem;
             border-radius: 9999px;
             font-size: 0.75rem;
             font-weight: 500;
-            background: var(--surface-light);
-            color: var(--text-muted);
         }
 
         .app-badge.education {
-            background: rgba(16, 185, 129, 0.2);
-            color: var(--accent-green);
+            background: linear-gradient(135deg, #e8f5e9, #c8e6c9);
+            color: #2e7d32;
         }
 
         .app-badge.utility {
-            background: rgba(59, 130, 246, 0.2);
-            color: var(--accent-blue);
+            background: linear-gradient(135deg, #e3f2fd, #bbdefb);
+            color: #1565c0;
         }
 
         .app-badge.game {
-            background: rgba(245, 158, 11, 0.2);
-            color: var(--accent-orange);
+            background: linear-gradient(135deg, #fff3e0, #ffe0b2);
+            color: #e65100;
         }
 
         /* Contact Section */
         .contact-section {
             padding: 4rem 2rem;
             text-align: center;
-            background: var(--surface);
+            background: linear-gradient(180deg, var(--warm-white) 0%, #fff9e6 100%);
         }
 
         .contact-section h2 {
-            font-size: 1.5rem;
+            font-size: 1.4rem;
             margin-bottom: 1rem;
+            color: var(--text-dark);
         }
 
         .coming-soon {
-            display: inline-block;
-            padding: 0.75rem 2rem;
-            background: var(--surface-light);
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.75rem 1.5rem;
+            background: white;
+            border: 1px solid rgba(212, 175, 55, 0.2);
             border-radius: 9999px;
             color: var(--text-muted);
             font-size: 0.9rem;
+            box-shadow: var(--shadow-soft);
         }
 
         /* Footer */
@@ -222,22 +287,19 @@
             padding: 2rem;
             text-align: center;
             color: var(--text-muted);
-            font-size: 0.875rem;
+            font-size: 0.85rem;
+            background: var(--cream);
         }
 
         footer a {
-            color: var(--primary);
+            color: var(--gold);
             text-decoration: none;
         }
 
         /* Responsive */
         @media (max-width: 768px) {
             .logo {
-                font-size: 2rem;
-            }
-
-            .developer-name {
-                font-size: 1.25rem;
+                font-size: 2.5rem;
             }
 
             .tagline {
@@ -254,14 +316,18 @@
 <body>
     <section class="hero">
         <div class="hero-content">
+            <div class="hero-emoji">🏃‍♂️✨</div>
             <h1 class="logo">MathRunner Lab</h1>
-            <p class="developer-name">Jun Yamashita</p>
-            <p class="tagline">Prototyping learning, one run at a time.</p>
+            <p class="tagline">学びをもっと楽しく、もっと身近に。</p>
+            <p class="tagline-sub">Prototyping learning, one run at a time.</p>
         </div>
     </section>
 
     <section class="apps-section">
-        <h2 class="section-title">📱 Apps</h2>
+        <div class="section-header">
+            <h2 class="section-title">📱 アプリ一覧</h2>
+            <p class="section-subtitle">すべて無料でご利用いただけます</p>
+        </div>
         <div class="apps-grid">
             <!-- 三角比ますたー -->
             <a href="https://apps.apple.com/jp/app/%E4%B8%89%E8%A7%92%E6%AF%94%E3%81%BE%E3%81%99%E3%81%9F%E3%83%BC/id1640664452"
@@ -271,8 +337,8 @@
                         alt="三角比ますたー" class="app-icon">
                     <h3 class="app-name">三角比ますたー</h3>
                 </div>
-                <p class="app-description">三角比学習アプリの決定版！単位円とクイズ感覚で楽しく学ぼう。Game Center対応でタイムアタックのランキングを競え！</p>
-                <span class="app-badge education">Education</span>
+                <p class="app-description">三角比学習アプリの決定版！単位円とクイズ感覚で楽しく学ぼう。Game Center対応でランキングを競える！</p>
+                <span class="app-badge education">📚 Education</span>
             </a>
 
             <!-- 積分ますたー -->
@@ -284,7 +350,7 @@
                     <h3 class="app-name">積分ますたー</h3>
                 </div>
                 <p class="app-description">積分計算をマスターしよう！クイズ形式で楽しく積分の練習ができる学習アプリ。</p>
-                <span class="app-badge education">Education</span>
+                <span class="app-badge education">📚 Education</span>
             </a>
 
             <!-- 合同式ますたー -->
@@ -296,7 +362,7 @@
                     <h3 class="app-name">合同式ますたー</h3>
                 </div>
                 <p class="app-description">楽しいクイズ形式で１次合同方程式を習熟しよう！数学オリンピックや情報科学の基礎にも。</p>
-                <span class="app-badge education">Education</span>
+                <span class="app-badge education">📚 Education</span>
             </a>
 
             <!-- カンタン席替え -->
@@ -308,7 +374,7 @@
                     <h3 class="app-name">カンタン席替え</h3>
                 </div>
                 <p class="app-description">授業の毎時間でも気軽に使える席替えアプリ。iPhone、iPad、Mac、Apple TVに対応！</p>
-                <span class="app-badge utility">Utility</span>
+                <span class="app-badge utility">🛠️ Utility</span>
             </a>
 
             <!-- 数字を順番に押す -->
@@ -320,18 +386,21 @@
                     <h3 class="app-name">数字を順番に押す</h3>
                 </div>
                 <p class="app-description">暇つぶし、脳トレ、目の体操、速読トレーニングにどうぞ！シンプルだけどハマる！</p>
-                <span class="app-badge game">Game</span>
+                <span class="app-badge game">🎮 Game</span>
             </a>
         </div>
     </section>
 
     <section class="contact-section">
-        <h2>📬 Contact & SNS</h2>
-        <p class="coming-soon">🚧 Coming Soon...</p>
+        <h2>📬 お問い合わせ・SNS</h2>
+        <div class="coming-soon">
+            <span>🚧</span>
+            <span>準備中です...</span>
+        </div>
     </section>
 
     <footer>
-        <p>© 2025 Jun Yamashita / MathRunner Lab. All rights reserved.</p>
+        <p>© 2025 MathRunner Lab. All rights reserved.</p>
     </footer>
 </body>
 
